--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,13 @@
+dist: xenial
 language: python
 
 python:
-  - "2.7"
-  - "3.4"
-  - "3.5"
   - "3.6"
+  - "3.7"
 
 env:
-  - DJANGO="Django>=1.8.0,<1.9.0"
-  - DJANGO="Django>=1.9.0,<1.10.0"
-  - DJANGO="Django>=1.10.0,<1.11.0"
+  - DJANGO="Django>2.0"
+
 install:
   - pip install -q $DJANGO
   - pip install -r requirements.txt
